<resources>
    <string name="app_name">TrassTarea</string>
    <string name="botonEmpezar">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="botonEmpezar1">Empezar!</string>
    <string name="quedanLista">Quedan:</string>
    <string name="listaDias">Días</string>
    <string name="tituloTareaLista">Título de la tarea</string>
    <string name="acercade">Acerca de...</string>
    <string name="salir">Salir</string>
    <string name="añadirTarea">Añadir Tarea</string>
    <string name="filtrarPrioridad">Filtrar Prioritarios</string>
    <string name="anadirTarea">Añadir tarea</string>
    <string name="tareaTitulo">Titulo Tarea</string>
    <string name="fechaCreacion">Fecha Creacion</string>
    <string name="fechaObjetivo">Fecha Objetivo\n</string>
    <string name="barraProgreso">Progreso</string>
    <string name="prioridad">Prioritaria</string>
    <string name="prioridadCB">Si</string>
    <string name="botonSiguiente">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verDescripcion">Ver Descripcion</string>
    <string name="editarTarea">Editar Tarea</string>
    <string name="borrarTarea">Borrar Tarea</string>
    <string name="editarTareaActividad">Editar Tarea</string>
    <string name="disponiblesTarea">No hay tareas disponibles!! añade para verlas</string>
    <string name="volver">Volver</string>
    <string name="guardar">Guardar</string>
    <string name="noIniciada">No Iniciada</string>
    <string name="iniciada">Iniciada</string>
    <string name="avanzada">Avanzada</string>
    <string name="casiFinalizada">Casi Finalizada</string>
    <string name="finalizada">Finalizada</string>
    <string name="title_activity_preferencias">Preferencias</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preferencias">Preferencias</string>
    <string name="documento">Documento</string>
    <string name="imagen">Imagen</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="adjuntar">Adjuntar</string>
    <string name="descripcion">Descripcion</string>
    <string name="title_activity_estadisticas">Estadisticas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="borrar_todas_las_tareas">Borrar todas las tareas</string>
    <string name="borrar_todas_las_tareas_completadas">Borrar todas las tareas completadas</string>
    <string name="title_activity_detalles">Detalles</string>
    <string name="imagenes">Imagenes</string>

</resources>