<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/descripcion"
        android:title="@string/verDescripcion"
        android:icon="@drawable/ic_descripcion"
        android:iconTint="@color/black"
        android:background="@drawable/menu_contextual_bonito"
        />


    <item
        android:id="@+id/editar"
        android:title="@string/editarTarea"
        android:icon="@drawable/baseline_mode_edit_outline_24"
        android:iconTint="@color/black"
        android:background="@drawable/menu_contextual_bonito" />

    <item
        android:id="@+id/borrar"
        android:title="@string/borrarTarea"
        android:icon="@drawable/delete"
        android:iconTint="@color/black"
        android:background="@drawable/menu_contextual_bonito" />

</menu>