<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearTareaActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/anadirTarea" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tareaTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tareaTitulo"
            app:layout_constraintEnd_toStartOf="@+id/tareaTitulo"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="52dp" />

        <EditText
            android:id="@+id/fechaCreacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tareaTitulo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/fechaCreacion"
            app:layout_constraintEnd_toStartOf="@+id/fechaCreacion"
            app:layout_constraintHorizontal_bias="0.672"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/fechaObjetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechaCreacion" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="99dp"
            android:layout_height="18dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="88dp"
            android:text="@string/fechaObjetivo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Spinner
            android:id="@+id/progresoSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fechaObjetivo" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/barraProgreso"
            app:layout_constraintEnd_toStartOf="@+id/progresoSpinner"
            app:layout_constraintHorizontal_bias="0.455"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:text="@string/prioridad"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="347dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prioridadCB"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.382"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            tools:layout_editor_absoluteY="332dp" />

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="133dp"
            android:layout_height="44dp"
            android:text="@string/botonSiguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>