<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.FragmentUno">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragmentos.CrearTareaActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/fechaObjetivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="40dp"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fechaCreacion" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tareaTitulo"
                app:layout_constraintEnd_toStartOf="@+id/tareaTitulo"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="118dp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/fechaCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="44dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tareaTitulo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/fechaCreacion"
                app:layout_constraintEnd_toStartOf="@+id/fechaCreacion"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="99dp"
                android:layout_height="18dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="84dp"
                android:text="@string/fechaObjetivo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <Spinner
                android:id="@+id/progresoSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fechaObjetivo" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/barraProgreso"
                app:layout_constraintEnd_toStartOf="@+id/progresoSpinner"
                app:layout_constraintHorizontal_bias="0.427"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:text="@string/prioridad"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="429dp"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioridadCB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.433"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                tools:layout_editor_absoluteY="416dp" />

            <EditText
                android:id="@+id/tareaTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="48dp"
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="99dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/botonSiguiente"
                android:layout_width="133dp"
                android:layout_height="48dp"
                android:text="@string/botonSiguiente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintVertical_bias="0.69" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>