<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/estrellaTarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/baseline_star_purple500_24" />

            <TextView
                android:id="@+id/tituloTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloTareaLista"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/fecha"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:paddingRight="15dp"
                android:text="@string/quedanLista" />

            <TextView
                android:id="@+id/diasRestantes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="15dp"
                android:text="0"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/listaDias" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/barraProgreso"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:paddingTop="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>